// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/forms/UserForm edits user: readonly username edit 1`] = `
<input
  className="ant-input ant-input-disabled"
  disabled={true}
  id="username"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="opensrp"
/>
`;

exports[`components/forms/UserForm renders correctly: contact field 1`] = `
<input
  className="ant-input"
  id="attributes_contact"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;

exports[`components/forms/UserForm renders correctly: contact label 1`] = `
<label
  className=""
  htmlFor="attributes_contact"
  title="Contact"
>
  Contact
</label>
`;

exports[`components/forms/UserForm show practitioner toggle when editing user and practitioner is null: practitionerToggle 1`] = `
Object {
  "children": <Memo
    name="active"
  >
    <Radio
      disabled={false}
      name="active"
      type="radio"
      value={true}
    >
      Yes
    </Radio>
    <Radio
      disabled={false}
      name="active"
      type="radio"
      value={false}
    >
      No
    </Radio>
  </Memo>,
  "id": "practitionerToggle",
  "label": "Mark as Practitioner",
  "name": "active",
}
`;

exports[`components/forms/UserForm show practitioner toggle when editing user and practitioner is provided: practitionerToggle 1`] = `
Object {
  "children": <Memo
    name="active"
  >
    <Radio
      disabled={false}
      name="active"
      type="radio"
      value={true}
    >
      Yes
    </Radio>
    <Radio
      disabled={false}
      name="active"
      type="radio"
      value={false}
    >
      No
    </Radio>
  </Memo>,
  "id": "practitionerToggle",
  "label": "Mark as Practitioner",
  "name": "active",
}
`;

exports[`components/forms/UserForm user is not edited if api is down: readonly username edit 1`] = `
<input
  className="ant-input ant-input-disabled"
  disabled={true}
  id="username"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="opensrp"
/>
`;
